[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Jeremy/Player_V2.gd" type="Script" id=2]
[ext_resource path="res://Miriya/Healthbar/HealthBar.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="JPlayer" type="KinematicBody2D"]
position = Vector2( 32, 352 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.25, 1.25 )
smoothing_enabled = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 86.2236, -2.38419e-07 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
margin_left = -1.18921
margin_top = -45.1899
margin_right = 38.8108
margin_bottom = -5.18994
rect_scale = Vector2( 0.05, 0.08 )
[connection signal="update_health" from="." to="." method="_on_JPlayer_update_health"]
